# taskerslabgen

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
bulk_files/: CeO2x2.cif  MoO2_rutile.out
docs/: abstract_ase_meeting.md
example/: BATCH_SLABS.md  CeO2_fluorite.py  IrO2_rutile.py  batch_unitcell_slabs.py  cutslab.py  generalcustlab.py  genslab.py  visualize_slab.py  x2supercell_CeO2_fluorite.py
output_slabs/: CeO2_fluorite_hkl_100_cut_96.in  CeO2_fluorite_hkl_110_cut_16.in  CeO2_fluorite_hkl_110_cut_24.in  CeO2_fluorite_hkl_110_cut_32.in  CeO2_fluorite_hkl_110_cut_40.in  CeO2_fluorite_hkl_110_cut_48.in  CeO2_fluorite_hkl_110_cut_56.in  CeO2_fluorite_hkl_110_cut_64.in  CeO2_fluorite_hkl_110_cut_72.in  CeO2_fluorite_hkl_110_cut_8.in  CeO2_fluorite_hkl_110_cut_80.in  CeO2_fluorite_hkl_110_cut_88.in  CeO2_fluorite_hkl_110_cut_96.in  CeO2_fluorite_hkl_111_cut_16.in  CeO2_fluorite_hkl_111_cut_32.in  CeO2_fluorite_hkl_111_cut_48.in  CeO2_fluorite_hkl_111_cut_64.in  CeO2_fluorite_hkl_111_cut_80.in  IrO2_rutile_hkl_001_cut_12.in  IrO2_rutile_hkl_001_cut_16.in  IrO2_rutile_hkl_001_cut_20.in  IrO2_rutile_hkl_001_cut_24.in  IrO2_rutile_hkl_001_cut_28.in  IrO2_rutile_hkl_001_cut_32.in  IrO2_rutile_hkl_001_cut_36.in  IrO2_rutile_hkl_001_cut_4.in  IrO2_rutile_hkl_001_cut_40.in  IrO2_rutile_hkl_001_cut_44.in  IrO2_rutile_hkl_001_cut_48.in  IrO2_rutile_hkl_001_cut_8.in  IrO2_rutile_hkl_100_cut_12.in  IrO2_rutile_hkl_100_cut_16.in  IrO2_rutile_hkl_100_cut_20.in  IrO2_rutile_hkl_100_cut_24.in  IrO2_rutile_hkl_100_cut_28.in  IrO2_rutile_hkl_100_cut_32.in  (+767 more)
(+990 files in other folders)
