[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskerslabgen"
version = "0.3.0"
description = "Tasker I/II/III slab generation and cutting utilities for ASE."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "ase",
  "numpy",
  "matplotlib",
  "scipy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["taskerslabgen"]
